# libclcxx

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.txt  copyright
include/: CMakeLists.txt  __ocl_array.h  __ocl_atomic.h  __ocl_atomic_enum.h  __ocl_atomic_impl.h  __ocl_atomic_traits.h  __ocl_config.h  __ocl_convert.h  __ocl_data.h  __ocl_device_queue.h  __ocl_enqueue_helpers.h  __ocl_enqueue_verify.h  __ocl_functions_macros.h  __ocl_image_enums.h  __ocl_image_traits.h  __ocl_image_traits_helpers.h  __ocl_images.h  __ocl_images_forward.h  __ocl_iterator.h  __ocl_limits.h  __ocl_limits_enums.h  __ocl_limits_values.h  __ocl_marker_type.h  __ocl_memory.h  __ocl_pipes.h  __ocl_pipes_enums.h  __ocl_range.h  __ocl_reinterpret.h  __ocl_sampler.h  __ocl_spirv_access_opcodes.h  __ocl_spirv_atomic_opcodes.h  __ocl_spirv_common_opcodes.h  __ocl_spirv_enqueue_opcodes.h  __ocl_spirv_image_opcodes.h  __ocl_spirv_memory_opcodes.h  __ocl_spirv_pipe_opcodes.h  __ocl_spirv_printf_opcode.h  __ocl_spirv_sampler_opcodes.h  __ocl_swizzle_engine.h  __ocl_swizzle_macros.h  (+53 more)
test/: CMakeLists.txt  Makefile  address_space_traits.clcpp  half_type_traits.clcpp  image_type_traits.clcpp  is_vector_type.clcpp  new.cl  new.clcpp  scalar_type.clcpp  test_address_space_traits.clcpp  test_float_traits.clcpp  test_misc_type_traits.clcpp  test_vector_type_traits.clcpp  type_traits.clcpp  vector_n.clcpp  vector_size.clcpp  vector_type_traits.clcpp
test/libclcxx/: lit.cfg  lit.site.cfg
test/libclcxx/Vectors/: TestVectorColorAccessor.cl  TestVectorColorAccessorNegative.cl  TestVectorDeclBraceInitializer.cl  TestVectorDeclCopyInitializer.cl  TestVectorDeclDirectInitializer.cl  TestVectorDeclEmptyInitializer.cl  TestVectorDeclNoInitializer.cl  TestVectorOpComparison.cl  TestVectorRelaxedOldScalarVecConvert.cl
test/libclcxx/address_spaces/: TestAddrSpaceAddAS.cl  TestAddrSpaceArraysPtr.cl  TestAddrSpaceAsCast.cl  TestAddrSpaceMemTypeFlags.cl  TestAddrSpaceQualConstantErrors.cl  TestAddrSpaceQualGlobalErrors.cl  TestAddrSpaceQualLocalErrors.cl  TestAddrSpaceQualPrivateErrors.cl  TestAddrSpaceSfinae.cl  TestAddrSpaceTemplateSpec.cl  TestAddrSpaceTypeConstant.cl  TestAddrSpaceTypeConstantPtr.cl  TestAddrSpaceTypeGlobal.cl  TestAddrSpaceTypeGlobalPtr.cl  TestAddrSpaceTypeLocal.cl  TestAddrSpaceTypeLocalPtr.cl  TestAddrSpaceTypePrivate.cl  TestAddrSpaceTypePrivatePtr.cl
test/libclcxx/array/: TestBasicArray.cl  TestBasicArrayIterator.cl  TestBasicArrayTupleSpecializations.cl
test/libclcxx/atomics/: TestBasicAtomicFlag.cl  TestBasicAtomic_volatile.cl  genatomics.py
test/libclcxx/conversions/: TestBasicConvertCast_booleans.cl  TestBasicConvertCast_booleans_neg.cl  TestBasicConvertCast_cv_as_quals.cl  TestBasicConvertCast_ftos.cl  TestBasicConvertCast_sign_change.cl  TestBasicConvertCast_stos.cl  TestBasicConvertCast_stos_neg.cl  TestBasicConvertCast_utof.cl  TestBasicConvertCast_utof_neg.cl
test/libclcxx/functional/: TestBasicReferenceWrapper.cl
test/libclcxx/functions/: gentests.py
test/libclcxx/half/: TestBasicHalf.cl
test/libclcxx/headers_check/: gen_headers_check.py
test/libclcxx/images/: TestBasicImageArraySize_neg.cl  TestBasicImageArray_Size.cl  TestBasicImageCommon.cl  TestBasicImageMSBool.cl  TestBasicImageOperators.cl  TestBasicImageRead.cl  TestBasicImageReading_image1d_array_f4_neg.cl  TestBasicImageReading_image1d_array_i4_neg.cl  TestBasicImageReading_image1d_array_u4_neg.cl  TestBasicImageReading_image1d_f4_neg.cl  TestBasicImageReading_image1d_i4_neg.cl  TestBasicImageReading_image1d_u4_neg.cl  TestBasicImageReading_image2d_array_depth_f1_neg.cl  TestBasicImageReading_image2d_array_f4_neg.cl  TestBasicImageReading_image2d_array_i4_neg.cl  TestBasicImageReading_image2d_array_u4_neg.cl  TestBasicImageReading_image2d_depth_f1_neg.cl  TestBasicImageReading_image2d_f4_neg.cl  TestBasicImageReading_image2d_i4_neg.cl  TestBasicImageReading_image2d_u4_neg.cl  TestBasicImageReading_image3d_f4_neg.cl  TestBasicImageReading_image3d_i4_neg.cl  TestBasicImageReading_image3d_u4_neg.cl  TestBasicImageSample.cl  TestBasicImageSampling_image1d_array_f4_neg.cl  TestBasicImageSampling_image1d_array_i4_neg.cl  TestBasicImageSampling_image1d_array_u4_neg.cl  TestBasicImageSampling_image1d_f4_neg.cl  TestBasicImageSampling_image1d_i4_neg.cl  TestBasicImageSampling_image1d_u4_neg.cl  TestBasicImageSampling_image2d_array_depth_f1_neg.cl  TestBasicImageSampling_image2d_array_f4_neg.cl  TestBasicImageSampling_image2d_array_i4_neg.cl  TestBasicImageSampling_image2d_array_u4_neg.cl  TestBasicImageSampling_image2d_depth_f1_neg.cl  TestBasicImageSampling_image2d_f4_neg.cl  TestBasicImageSampling_image2d_i4_neg.cl  TestBasicImageSampling_image2d_u4_neg.cl  TestBasicImageSampling_image3d_f4_neg.cl  TestBasicImageSampling_image3d_i4_neg.cl  (+27 more)
test/libclcxx/iterators/: TestBasicIteratorsBackInsertIterator.cl  TestBasicIteratorsFrontInsertIterator.cl  TestBasicIteratorsFunctions.cl  TestBasicIteratorsInsertIterator.cl  TestBasicIteratorsMoveIterator.cl  TestBasicIteratorsReverseIterator.cl  TestBasicIteratorsTags.cl  TestBasicIteratorsTraitsSpecializations.cl  TestBasicIteratorsTraitsSpecializations_neg.cl
test/libclcxx/limits/: TestBasicLimitsBool.cl  TestBasicLimitsDenormsAbsent.cl  TestBasicLimitsDenormsPresent.cl  TestBasicLimitsFloatingPoint.cl  TestBasicLimitsFloatingPointDigits.cl  TestBasicLimitsInfs.cl  TestBasicLimitsIntegers.cl  TestBasicLimitsNans.cl  TestBasicLimitsScalars.cl  TestBasicLimitsSignalingNans.cl  TestBasicLimitsSpecialization_neg.cl  TestBasicLimitsVectors.cl
test/libclcxx/marker/: TestBasicMarkerIsMarker.cl  TestBasicMarkerIsMarker_neg.cl
test/libclcxx/math_constans/: TestBasicMathConstants_double.cl  TestBasicMathConstants_float.cl  TestBasicMathConstants_half.cl  TestBasicMathConstants_template_variables.cl
test/libclcxx/pipes/: TestBasicPipeApi.cl  TestBasicPipeNeg.cl  TestBasicPipeStorageGlobal.cl  TestBasicPipeStorageStatic.cl  TestBasicPipeStructData.cl
test/libclcxx/printf/: TestBasicSpirPrintf.cl
test/libclcxx/queue/: TestBasicQueueEnqueueFlags.cl  (+10 more)
(+165 files in other folders)
